Add weather generator

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -13,10 +13,11 @@
 
   <!-- include source files here... -->
   <script src="src/airport.js"></script>
+  <script src="src/weather.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/airport-spec.js"></script>
-
+  <script src="spec/weather-spec.js"></script>
 </head>
 
 <body>
